@@ -2,6 +2,7 @@ package com.hcproj.healthcareprojectbackend.workout.service;
 
 import com.hcproj.healthcareprojectbackend.global.exception.BusinessException;
 import com.hcproj.healthcareprojectbackend.global.exception.ErrorCode;
+import com.hcproj.healthcareprojectbackend.global.util.UtilityProvider;
 import com.hcproj.healthcareprojectbackend.workout.dto.response.AlternativeExerciseDTO;
 import com.hcproj.healthcareprojectbackend.workout.dto.response.ExerciseDetailResponseDTO;
 import com.hcproj.healthcareprojectbackend.workout.entity.ExerciseEntity;
@@ -10,8 +11,6 @@ import com.hcproj.healthcareprojectbackend.workout.dto.response.ExerciseListResp
 import com.hcproj.healthcareprojectbackend.workout.dto.request.ExerciseCreateRequestDTO;
 import com.hcproj.healthcareprojectbackend.workout.dto.response.ExerciseCreateResponseDTO;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -34,14 +33,11 @@ public class ExerciseService {
      */
     @Transactional(readOnly = true)
     public ExerciseDetailResponseDTO getExerciseDetail(Long exerciseId) {
-        // 1. 운동 조회 (활성화된 운동만)
         ExerciseEntity exercise = exerciseRepository.findByExerciseIdAndIsActiveTrue(exerciseId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.EXERCISE_NOT_FOUND));
 
-        // 2. 대체 운동 조회
         List<AlternativeExerciseDTO> alternatives = findAlternatives(exercise);
 
-        // 3. 응답 DTO 생성
         ExerciseDetailResponseDTO.ExerciseDTO exerciseDTO = new ExerciseDetailResponseDTO.ExerciseDTO(
                 exercise.getExerciseId(),
                 exercise.getName(),
@@ -66,8 +62,7 @@ public class ExerciseService {
 
         List<ExerciseEntity> alternativeEntities = exerciseRepository.findAlternatives(
                 exercise.getBodyPart(),
-                exercise.getExerciseId(),
-                PageRequest.of(0, 3)
+                exercise.getExerciseId()
         );
 
         return alternativeEntities.stream()
@@ -80,28 +75,45 @@ public class ExerciseService {
     }
 
     /**
-     * 운동 리스트 조회 (무한 스크롤 + 검색 + 필터).
+     * 운동 리스트 조회 (무한 스크롤 + 검색 + 필터 + 띄어쓰기 무시).
      */
     @Transactional(readOnly = true)
     public ExerciseListResponseDTO getExerciseList(Long cursor, Integer limit, String keyword, String bodyPart) {
+        // 1. limit 유효성 검사
         int actualLimit = (limit == null || limit <= 0) ? DEFAULT_LIMIT : Math.min(limit, MAX_LIMIT);
+        int limitSize = actualLimit + 1; // hasNext 판단용
 
-        Pageable pageable = PageRequest.of(0, actualLimit + 1);
+        // 2. 검색어 정규화
+        String normalizedKeyword = UtilityProvider.normalizeKeyword(keyword);
 
-        List<ExerciseEntity> entities = exerciseRepository.findExercisesWithCursor(
-                cursor,
-                keyword,
-                bodyPart,
-                pageable
-        );
+        // 3. bodyPart 정규화
+        String normalizedBodyPart = UtilityProvider.normalizeBodyPart(bodyPart);
 
+        // 4. 조회 (검색어 유무에 따라 분기)
+        List<ExerciseEntity> entities;
+        if (normalizedKeyword == null) {
+            // 검색어 없음
+            entities = exerciseRepository.findExercisesWithCursorNoKeyword(
+                    cursor, normalizedBodyPart, limitSize
+            );
+        } else {
+            // 검색어 있음 - 띄어쓰기 제거 + 소문자 변환 + 와일드카드 추가
+            String likePattern = "%" + normalizedKeyword.toLowerCase().replace(" ", "") + "%";
+            entities = exerciseRepository.findExercisesWithCursorAndKeyword(
+                    cursor, likePattern, normalizedBodyPart, limitSize
+            );
+        }
+
+        // 5. hasNext 판단
         boolean hasNext = entities.size() > actualLimit;
 
+        // 6. 실제 반환할 데이터 (limit개만)
         List<ExerciseEntity> resultEntities = hasNext
                 ? entities.subList(0, actualLimit)
                 : entities;
 
-        var items = resultEntities.stream()
+        // 7. DTO 변환
+        List<ExerciseListResponseDTO.ExerciseItemDTO> items = resultEntities.stream()
                 .map(entity -> new ExerciseListResponseDTO.ExerciseItemDTO(
                         entity.getExerciseId(),
                         entity.getName(),
@@ -112,12 +124,14 @@ public class ExerciseService {
                 ))
                 .toList();
 
+        // 8. nextCursor 계산
         Long nextCursor = hasNext && !resultEntities.isEmpty()
-                ? resultEntities.getLast().getExerciseId()
+                ? resultEntities.get(resultEntities.size() - 1).getExerciseId()
                 : null;
 
         return new ExerciseListResponseDTO(items, nextCursor, hasNext);
     }
+
     /**
      * 운동 등록 (관리자 전용)
      */
@@ -143,6 +157,7 @@ public class ExerciseService {
                 .createdAt(saved.getCreatedAt())
                 .build();
     }
+
     /**
      * 운동 삭제 (관리자 전용)
      */
@@ -159,4 +174,3 @@ public class ExerciseService {
                 .build();
     }
 }
-
